--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "front-next",
 	"version": "0.5.2",
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite -d --host",
 		"build": "vue-tsc --noEmit --skipLibCheck && vite build",
 		"serve": "vite preview",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
@@ -24,6 +24,7 @@
 		"merge": "^2.1.1",
 		"mitt": "^2.1.0",
 		"mockjs": "^1.1.0",
+		"moment": "^2.29.1",
 		"nprogress": "^0.2.0",
 		"quill": "^1.3.7",
 		"socket.io-client": "^4.0.0",
